--- a/css/main.css
+++ b/css/main.css
@@ -55,3 +55,7 @@ hr {
     font-family: "Helvetica Neue","Helvetica",Arial,sans-serif;
     color: #777;
 }
+
+.footah {
+    background-color: #5b6269;
+}
